--- a/MidTerm.ipynb
+++ b/MidTerm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -17,6 +17,8 @@
    ],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "import geopandas as gp\n",
     "import matplotlib.pyplot as plt\n",
     "import scipy.stats\n",
     "import pylab as pl\n",
@@ -387,7 +389,11 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# draw a scatter matrix\n",
+    "from pandas.tools.plotting import scatter_matrix\n",
+    "scatter_matrix (nrg, s=300, figsize=(16, 16), diagonal='kde')"
+   ]
   }
  ],
  "metadata": {
