--- a/MidTerm.ipynb
+++ b/MidTerm.ipynb
@@ -300,6 +300,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2 samples: ks, ad, pearson, spearman\n",
+    "## goodness of fit: ks, ad, kl, chisquare"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
